HWPI basetheme: misc css fixes-remove spacing below header in upcoming events widget, rework slideshow based on new markup, fix tabs font, etc.#1327

--- a/themes/hwpi_basetheme/css/hwpi.base.css
+++ b/themes/hwpi_basetheme/css/hwpi.base.css
@@ -325,7 +325,9 @@ ol.search-results li.search-result:last-child {
   float: left;
 }
 
-
+#event-content .node-header h1.node-title {
+	margin-bottom: 0;
+}
 
 /* Class nodes */
 .node-class .field-name-field-semester,
